# python-dev

./: .editorconfig  .gitignore  README.md
projects/01-cli-tool/: .coverage  README.md  pyproject.toml
projects/01-cli-tool/src/cleanit/: classifier.py  cleaner.py  cli.py  history.py
projects/01-cli-tool/tests/: test_classifier.py  test_cleaner.py  test_cli.py  test_history.py
projects/02-scraper/: pyproject.toml
projects/02-scraper/docs/: html-exploration.md
projects/02-scraper/src/finscrap/: parser.py
projects/02-scraper/tests/: test_parser.py
