[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cleanit"
version = "0.1.0"
description = "A CLI tool to automatically organize your downloads folder"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "kjemimad", email = "ton-email@example.com" }
]
keywords = ["cli", "files", "organizer", "downloads", "automation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "typer>=0.12.0",
  "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.4.0",
  "mypy>=1.10.0",
]

[project.scripts]
cleanit = "cleanit.cli:app"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
mypy_path = "src"
explicit_package_bases = true

[tool.hatch.build.targets.wheel]
packages = ["src/cleanit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/cleanit --cov-report=term-missing"