[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "finscrap"
version = "0.1.0"
description = "A CLI tool to scrape and store financial data from Yahoo Finance"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "kjemimad", email = "koumbajemimadoria@gmail.com" }
]
keywords = ["scraper", "finance", "yahoo", "stocks", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Financial and Insurance Industry",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "typer>=0.12.0",
  "rich>=13.0.0",
  "requests>=2.31.0",
  "beautifulsoup4>=4.12.0",
  "lxml>=5.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.4.0",
  "mypy>=1.10.0",
  "types-requests>=2.31.0",
  "types-beautifulsoup4>=4.12.0",
  "responses>=0.25.0",
]

[project.scripts]
finscrap = "finscrap.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/finscrap"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
mypy_path = "src"
explicit_package_bases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/finscrap --cov-report=term-missing"